--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -217,6 +217,22 @@
             <div class="star"></div>
         </div>
     </div>
+
+    <div class="login-container">
+    <h2>用户登录</h2>
+    <form action="login.php" method="POST">
+        <div class="input-group">
+            <label for="username">用户名：</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="input-group">
+            <label for="password">密码：</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit">登录</button>
+    </form>
+</div>
+
 </body>
 
 </html>
