--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>stars</title>
+     <link rel="stylesheet" href="Root.Directory/css/style.css"> <!-- 引入样式文件 -->
     <style>
         @-webkit-keyframes star-opacity {
             0% {
