--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -6,63 +6,202 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>stars</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- 引入样式文件 -->
-
+     <link rel="stylesheet" href="css/style.css"> 
     <style>
-        /* 这里保留原本的星星背景动画样式 */
         @-webkit-keyframes star-opacity {
-            /* 省略原有的星星背景动画样式 */
+            0% {
+                opacity: 0
+            }
+
+            40% {
+                opacity: 1
+            }
+
+            60% {
+                opacity: 1
+            }
+
+            100% {
+                opacity: 0
+            }
         }
 
-        /* 省略其余的星星背景动画样式 */
-        
-        /* 新添加的居中显示登录窗口的样式 */
-        .login-container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+        @keyframes star-opacity {
+            0% {
+                opacity: 0
+            }
+
+            40% {
+                opacity: 1
+            }
+
+            60% {
+                opacity: 1
+            }
+
+            100% {
+                opacity: 0
+            }
         }
 
-        .login-container h2 {
-            margin-bottom: 20px;
+        @-webkit-keyframes star-pos {
+            0% {
+                transform: scale(0) rotate(0) translate3d(0, 0, 0);
+                -webkit-transform: scale(0) rotate(0) translate3d(0, 0, 0);
+                -moz-transform: scale(0) rotate(0) translate3d(0, 0, 0)
+            }
+
+            100% {
+                transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
+                -webkit-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
+                -moz-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0)
+            }
         }
 
-        .input-group {
-            margin-bottom: 15px;
-            text-align: left;
+        @keyframes star-pos {
+            0% {
+                transform: scale(0) rotate(0) translate3d(0, 0, 0);
+                -webkit-transform: scale(0) rotate(0) translate3d(0, 0, 0);
+                -moz-transform: scale(0) rotate(0) translate3d(0, 0, 0)
+            }
+
+            100% {
+                transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
+                -webkit-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
+                -moz-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0)
+            }
         }
 
-        .input-group label {
+        body {
+            padding: 0;
+            margin: 0;
+            overflow: hidden; /* 隐藏滚动条 */
+        }
+
+        .index-bg {
+            width: 100vw;
+            height: 100vh;
+            background: linear-gradient(-225deg, #473B7B 0%, #3584A7 51%, #30D2BE 100%);
+            overflow: hidden; /* 隐藏滚动条 */
+            position: relative; /* 确保星星的相对定位 */
+        }
+
+        .index-bg .stars {
+            height: 100%;
+            position: relative;
+        }
+
+        .index-bg .star {
             display: block;
-            margin-bottom: 5px;
+            width: 5px;
+            height: 5px;
+            border-radius: 50%;
+            background: #fff;
+            position: absolute;
+            -webkit-transform-origin: 100% 0;
+            transform-origin: 100% 0;
+            -webkit-animation: star-opacity 5s infinite ease-in, star-pos 5s infinite ease-in;
+            animation: star-opacity 5s infinite ease-in, star-pos 5s infinite ease-in;
+            -webkit-box-shadow: 0 0 5px 5px rgba(255, 255, 255, .3);
+            box-shadow: 0 0 5px 5px rgba(255, 255, 255, .3);
+            opacity: 0;
+            z-index: 2
         }
 
-        .input-group input {
-            width: 100%;
-            padding: 8px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        .index-bg .star:after {
+            content: '';
+            display: block;
+            top: 0;
+            left: 4px;
+            border: 0 solid #fff;
+            border-width: 0 90px 2px;
+            border-color: transparent transparent transparent rgba(255, 255, 255, .3);
+            -webkit-transform: rotate(-45deg) translate3d(1px, 3px, 0);
+            transform: rotate(-45deg) translate3d(1px, 3px, 0);
+            -webkit-box-shadow: 0 0 1px 0 rgba(255, 255, 255, .1);
+            box-shadow: 0 0 1px 0 rgba(255, 255, 255, .1);
+            -webkit-transform-origin: 0% 100%;
+            transform-origin: 0% 100%
         }
 
-        button[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
+        /* 调整星星的位置，使其在不同屏幕上更好地分布 */
+        .index-bg .star:nth-child(1) {
+            top: 10%;
+            left: 20%;
+            animation-delay: 0s;
         }
 
-        button[type="submit"]:hover {
-            background-color: #45a049;
+        .index-bg .star:nth-child(2) {
+            top: 30%;
+            left: 50%;
+            animation-delay: 1s;
+        }
+
+        .index-bg .star:nth-child(3) {
+            top: 50%;
+            left: 80%;
+            animation-delay: 2s;
+        }
+
+        .index-bg .star:nth-child(4) {
+            top: 70%;
+            left: 40%;
+            animation-delay: 3s;
+        }
+
+        .index-bg .star:nth-child(5) {
+            top: 90%;
+            left: 60%;
+            animation-delay: 4s;
+        }
+
+        .index-bg .star:nth-child(6) {
+            top: 20%;
+            left: 90%;
+            animation-delay: 5s;
+        }
+
+        .index-bg .star:nth-child(7) {
+            top: 80%;
+            left: 10%;
+            animation-delay: 6s;
+        }
+
+        @media (max-width: 768px) {
+            .index-bg .star:nth-child(1) {
+                top: 15%;
+                left: 25%;
+            }
+
+            .index-bg .star:nth-child(2) {
+                top: 35%;
+                left: 55%;
+            }
+
+            .index-bg .star:nth-child(3) {
+                top: 55%;
+                left: 75%;
+            }
+
+            .index-bg .star:nth-child(4) {
+                top: 75%;
+                left: 45%;
+            }
+
+            .index-bg .star:nth-child(5) {
+                top: 95%;
+                left: 65%;
+            }
+
+            .index-bg .star:nth-child(6) {
+                top: 25%;
+                left: 85%;
+            }
+
+            .index-bg .star:nth-child(7) {
+                top: 85%;
+                left: 15%;
+            }
         }
     </style>
 </head>
@@ -80,7 +219,13 @@
         </div>
     </div>
 
-    <div class="login-container">
+</body>
+
+
+
+    <body>
+        
+   <div class="login-container">
         <h2>用户登录</h2>
         <form action="login.php" method="POST">
             <div class="input-group">
@@ -94,7 +239,6 @@
             <button type="submit">登录</button>
         </form>
     </div>
-
-</body>
+    </body>
 
 </html>
