--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -224,6 +224,19 @@
 
 
     <body>
+
+
+
+
+        <style>
+        .transparent-window {
+            width: 200px;
+            height: 200px;
+            background-color: rgba(0, 0, 255, 0.5); /* 设置背景颜色为蓝色，透明度为50% */
+        }
+    </style>
+
+        
         
    <div class="login-container">
         <h2>用户登录</h2>
