--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -10,6 +10,7 @@
     <!-- 导入外部样式表 -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/background.css">
+    <link rel="import" href="HTML/admin.html">
 
     <!-- 内嵌样式不应该包含在 <style> 标签内部 -->
     <style>
