--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stars Animation</title>
-    
+    <title>用户登录</title>
+
     <!-- 导入外部样式表 -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/background.css">
+    <link rel="stylesheet" href="css/login-form.css">
+
+    <!-- 导入外部 HTML -->
     <link rel="import" href="HTML/admin.html">
-
-    <!-- 内嵌样式不应该包含在 <style> 标签内部 -->
-    <style>
-        /* 在这里可以添加页面的其他样式 */
-    </style>
 </head>
-
 <body>
-    <div class="index-bg">
-        <div class="stars">
-          
-        </div>
+    <div class="login-container">
+        <h2>用户登录</h2>
+        <form action="login.php" method="POST">
+            <div class="input-group">
+                <label for="username">用户名：</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="input-group">
+                <label for="password">密码：</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">登录</button>
+        </form>
     </div>
 
-   
     <!-- 导入外部 JavaScript 文件 -->
-    <script src="javascript/quantity.js"></script>
+    <script src="javascript/login-validation.js"></script>
 </body>
-
 </html>
- 
