--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -10,24 +10,10 @@
     <link rel="stylesheet" href="css/login-form.css">
 
     <!-- 导入外部 HTML -->
-    <link rel="import" href="HTML/admin.html">
+    <link rel="import" href="HTML/blog-single.html">
 </head>
 <body>
-    <div class="login-container">
-        <h2>用户登录</h2>
-        <form action="login.php" method="POST">
-            <div class="input-group">
-                <label for="username">用户名：</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">密码：</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit">登录</button>
-        </form>
-    </div>
-
+   
     <!-- 导入外部 JavaScript 文件 -->
     <script src="javascript/login-validation.js"></script>
 </body>
