--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -8,13 +8,22 @@
     <!-- 导入外部样式表 -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/login-form.css">
-
-    <!-- 导入外部 HTML -->
-    <link rel="import" href="HTML/blog-single.html">
 </head>
 <body>
-   
+    <!-- 这里是用于加载外部 HTML 文件的占位符 -->
+    <div id="blog-content"></div>
+
     <!-- 导入外部 JavaScript 文件 -->
     <script src="javascript/login-validation.js"></script>
+
+    <!-- 用于加载外部 HTML 文件的脚本 -->
+    <script>
+        fetch('HTML/blog-single.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('blog-content').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading HTML:', error));
+    </script>
 </body>
 </html>
