--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -7,14 +7,14 @@
 
     <!-- 导入外部样式表 -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/login-form.css">
+    <link rel="stylesheet" href="css/background.css">
 </head>
 <body>
     <!-- 这里是用于加载外部 HTML 文件的占位符 -->
     <div id="blog-content"></div>
 
     <!-- 导入外部 JavaScript 文件 -->
-    <script src="javascript/login-validation.js"></script>
+    <script src="javascript/quantity.js"></script>
 
     <!-- 用于加载外部 HTML 文件的脚本 -->
     <script>
