--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -13,6 +13,9 @@
     <!-- 这里是用于加载外部 HTML 文件的占位符 -->
     <div id="blog-content"></div>
 
+    <!-- 星星容器 -->
+    <div class="stars"></div>
+
     <!-- 导入外部 JavaScript 文件 -->
     <script src="javascript/quantity.js"></script>
 
