--- a/Root.Directory/index.html
+++ b/Root.Directory/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>用户登录</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>stars</title>
 
-    <!-- 导入外部样式表 -->
-    <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/background.css">
+    <style>
+
+    </style>
 </head>
+
 <body>
-    <!-- 这里是用于加载外部 HTML 文件的占位符 -->
-    <div id="blog-content"></div>
-
-    <!-- 星星容器 -->
-    <div class="stars"></div>
-
-    <!-- 导入外部 JavaScript 文件 -->
-    <script src="javascript/quantity.js"></script>
-
-    <!-- 用于加载外部 HTML 文件的脚本 -->
-    <script>
-        fetch('HTML/blog-single.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('blog-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading HTML:', error));
-    </script>
+    <div class="index-bg">
+        <div class="stars">
+          
+        </div>
+    </div>
 </body>
+
 </html>
